src/styles/_themes.scss
@import "../../node_modules/bootstrap/scss/bootstrap.scss";
@import "colors";

/*
 * Theme definitions
 */

$themes: (
  light: (
    backgroundColor: white,
    footerBackground: white,
    navBackground: $gray-100,
    secondary: $gray-900,
    textColor: $black,
    firstName: $purple,
    lastName: $black,
    linkHover: $gray-800,
    themeColor: $purple,
    heartColor: pink,
    titleColor: $purple,
    hrefColor: $purple,
    github: $black,
    facebook: $facebook-blue,
    twitch: $twitch,
    file: $purple,
    iconBackground: $white,
    cardBackground: $white,
  ),
  dark: (
    backgroundColor: #222,
    footerBackground: #222,
    secondary: $gray-100,
    navBackground: $dark-gray,
    linkHover: $gray-200,
    textColor: $gray-300,
    firstName: $gray-100,
    lastName: $empire-red,
    titleColor: $white,
    hrefColor: $faded-red,
    themeColor: $dark-red,
    heartColor: red,
    github: $empire-red,
    facebook: $facebook-blue,
    twitch: $twitch,
    file: $empire-red,
    iconBackground: $black,
    cardBackground: $dark-gray,
  ),
);

/*
 * Implementation of themes
 */
@mixin themify($themes) {
  @each $theme, $map in $themes {
    .theme-#{$theme} & {
      $theme-map: () !global;
      @each $key, $submap in $map {
        $value: map-get(map-get($themes, $theme), "#{$key}");
        $theme-map: map-merge(
          $theme-map,
          (
            $key: $value,
          )
        ) !global;
      }
      @content;
      $theme-map: null !global;
    }
  }
}

@function themed($key) {
  @return map-get($theme-map, $key);
}

/** CUSTOM THEMING BEGIN */

.first-name {
  @include themify($themes) {
    color: themed("firstName");
  }
}

.last-name {
  @include themify($themes) {
    color: themed("lastName");
  }
}

// header
.navbar,
.navbar div {
  @include themify($themes) {
    background: themed("navBackground");
  }
}

.nav-links a {
  @include themify($themes) {
    color: themed("linkHover") !important;
    &:hover {
      text-decoration: underline themed("hrefColor") solid;
    }
  }
}

.footer {
  @include themify($themes) {
    background: themed("backgroundColor");
  }
}

.heart {
  @include themify($themes) {
    color: themed("heartColor");
  }
}

.watch-list-title {
  @include themify($themes) {
    color: themed("secondary");
  }
}

.card-container {
  @include themify($themes) {
    width: 25rem;
    height: 23rem;
    text-decoration-color: themed("hrefColor");
    & * {
      background: themed("cardBackground");
    }
  }
}

.blog-filter {
  @include themify($themes) {
    & input {
      color: themed("titleColor");
      &:focus {
        box-shadow: 0 0 0 1px rgba(themed("hrefColor"), 0.5);
        border-color: rgba(themed("hrefColor"), 0.5);
      }
    }
  }
}

.resume-tags {
  @include themify($themes) {
    background: themed("navBackground");
  }
}

.icons:hover {
  @include themify($themes) {
    background: themed("iconBackground");
    &.github {
      color: themed("github");
    }
    &.facebook {
      color: themed("facebook");
    }
    &.twitch {
      color: themed("twitch");
    }
    &.file {
      color: themed("file");
    }
  }
}

h1,
h2,
h3,
h4,
h5 {
  @include themify($themes) {
    color: themed("titleColor");
  }
}

div {
  @include themify($themes) {
    background: themed("backgroundColor");
  }
}

p {
  @include themify($themes) {
    color: themed("textColor");
  }
}

